<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/logoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/cabin"
        android:text="@string/logo_text"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/credits_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:background="#FFFFFF"
        android:onClick="openCredits"
        android:text="@string/credits"
        android:visibility="visible"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/credits_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView"
        app:layout_constraintVertical_bias="0.794">

        <Button
            android:id="@+id/button_pvp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:onClick="playPVP"
            android:text="@string/pvp" />

        <Button
            android:id="@+id/button_pve"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:onClick="playPVE"
            android:text="@string/pve" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>